service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  labels:
    app: go-app-service
spec:
  selector:
    app: go-app
  ports:
  - port: 80
    name: http
    targetPort: 8080
  type: NodePort
