ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: go-app
          servicePort: 80
        path: /
